--- a/src/app/components/bookstore-header/bookstore-header/bookstore-header.component.html
+++ b/src/app/components/bookstore-header/bookstore-header/bookstore-header.component.html
@@ -1,23 +1,41 @@
 <div class="header-main-cnt">
     <div class="header">
-     <div class="bookstore-icon">
-       <img src="assets/education.png" alt="Image not found">
-       <span>BookStore</span>
-    </div>
+        <div class="bookstore-icon">
+            <img src="assets/education.png" alt="Image not found">
+            <span>BookStore</span>
+        </div>
 
-    <div class="search-container">
-        <input type="text" class="search-input" placeholder="Search...">
-        <mat-icon class="search-icon" svgIcon="search-icon" aria-hidden="false" aria-label="Search SVG icon"></mat-icon>
-    </div>
+        <div class="search-container">
+            <input type="text" class="search-input" placeholder="Search...">
+            <mat-icon class="search-icon" svgIcon="search-icon" aria-hidden="false" aria-label="Search SVG icon"></mat-icon>
+        </div>
 
-    <div class="profile">
-        <mat-icon class="profile-icon"  svgIcon="profile-icon" aria-hidden="false" aria-label="Search SVG icon"></mat-icon>
-        <span>Profile</span>
-    </div>
+        <div class="profile" [matMenuTriggerFor]="Profile">
+            <mat-icon class="profile-icon" svgIcon="profile-icon" aria-hidden="false" aria-label="Profile SVG icon"></mat-icon>
+            <span>Profile</span>
+        </div>
 
-    <div class="cart">
-        <mat-icon class="cart-icon" svgIcon="cart-icon" aria-hidden="false" aria-label="Search SVG icon"></mat-icon>
-        <span>Cart</span>
+        <div class="cart" (click)="handleCart()">
+            <mat-icon class="cart-icon" svgIcon="cart-icon" aria-hidden="false" aria-label="Cart SVG icon"></mat-icon>
+            <span>Cart</span>
+        </div>
     </div>
 </div>
+
+<mat-menu #Profile="matMenu">
+    <div class="profile-history">
+        <span><b>Welcome</b></span>
+        <span>To access account and manage orders</span>
+        <div class="login-signup">
+            <button mat-button (click)="login()">LOGIN/SIGNUP</button>
+        </div>
+        <div>         <hr>
+        </div>
+        <div class="order-icon">My Orders</div>
+        <div class="heart-icon">&#x2764; Wishlist</div>
+    </div>
+</mat-menu>
+
+<div>
+    <router-outlet></router-outlet>
 </div>
