--- a/src/app/components/dashboard/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard/dashboard.component.html
@@ -1,2 +1,3 @@
 <app-bookstore-header></app-bookstore-header>
-<router-outlet></router-outlet>
+<!-- <app-books-container></app-books-container> -->
+<!-- <router-outlet></router-outlet> -->
