--- a/src/app/components/bookDetail/book-detail/book-detail.component.scss
+++ b/src/app/components/bookDetail/book-detail/book-detail.component.scss
@@ -1,63 +1,191 @@
-.bookdetails-main-cnt {
-    width: 100%;
-    // padding: 1% 12%;
-    border: 2px solid green;
+// .bookdetails-main-cnt {
+//     width: 100%;
+//     // padding: 1% 12%;
+//     border: 2px solid green;
+// }
+// .book-details-cnt{
+//     border: 2px solid black;
+//     height: fit-content;
+//     width: 100%;
+//     display: flex;
+
+// }
+// .book-image-and-options{
+//     border: 2px solid black;
+//     height: fit-content;
+//     width: 80%;
+// }
+// .book-image {
+//     border: 2px solid rgb(216, 31, 31);
+//     // height: 30%; 
+//     height: 380px;
+//     width: 70%;     
+//     display: flex;
+//     justify-content: flex-end;
+//     align-items: center;
+//     // padding: 5% 8%; 
+//     box-shadow: 0 -4px 4px -4px rgba(0, 0, 0, 0.3), -4px 0 4px -4px rgba(0, 0, 0, 0.3), 
+//                 4px 0 4px -4px rgba(0, 0, 0, 0.3), 0 6px 6px -2px rgba(0, 0, 0, 0.2); 
+// }
+
+// .options {
+//     display: flex;
+//     flex-direction: row;
+//     gap: 5%; 
+//     margin-left: 7%; 
+// }
+
+// .book-details {
+//     display: flex;
+//     flex-direction: column;
+//     gap: 2%;
+//     padding-right: 20%;
+//     width: 85%; 
+//     border: 2px solid rebeccapurple;
+// }
+
+// .rating-quantity {
+//     display: flex;
+//     flex-direction: row;
+//     gap: 1%; 
+// }
+
+// /* For horizontal line */
+// .book-details hr {
+//     border-top: 1px solid black;
+//     margin: 2% 0; 
+// }
+
+// /* For stars */
+// .stars {
+//     font-size: 2.4vw; 
+//     outline-color: black;
+// }
+
+.bookdetails-main-cnt{
+    width:100%;
+    // border: 2px solid red;
+    padding: 2% 0% 0% 0%;
 }
+
+
+.back-to-dashbaord a{
+    text-decoration: none;
+    padding: 1.564% 0.700% 0.800% 10%;
+
+}
+
+
 .book-details-cnt{
-    border: 2px solid black;
-    height: fit-content;
-    width: 100%;
-    display: flex;
-
-}
-.book-image-and-options{
-    border: 2px solid black;
-    height: fit-content;
-    width: 80%;
-}
-.book-image {
-    border: 2px solid rgb(216, 31, 31);
-    // height: 30%; 
-    height: 380px;
-    width: 70%;     
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    // padding: 5% 8%; 
-    box-shadow: 0 -4px 4px -4px rgba(0, 0, 0, 0.3), -4px 0 4px -4px rgba(0, 0, 0, 0.3), 
-                4px 0 4px -4px rgba(0, 0, 0, 0.3), 0 6px 6px -2px rgba(0, 0, 0, 0.2); 
-}
-
-.options {
     display: flex;
     flex-direction: row;
-    gap: 5%; 
-    margin-left: 7%; 
 }
+.del {
+    text-decoration: line-through;
+  }
 
-.book-details {
+.book-image-and-options {
     display: flex;
     flex-direction: column;
-    gap: 2%;
-    padding-right: 20%;
-    width: 85%; 
-    border: 2px solid rebeccapurple;
+    align-items: end;
+    width: 40%;
+    gap: 10px;
+    // border: 2px solid gold;
 }
 
-.rating-quantity {
+.book-image {
+    border: 2px solid rgb(205, 200, 200);
+    height: 300px;
+    width: 220px;
+    background: #F5F5F5;
+    padding: 10% 10%;
+ }
+
+ .options{
+   display: flex;
+   flex-direction: row;
+   padding: 0% 10% 0% 10% ;
+   gap: 10px;   
+ }
+.cart-button{
+    background-color: maroon;
+    color: white;
+    width: 230%;
+}
+.quantity-update{
+  display: flex;
+  flex-direction: row;
+  gap:10px;
+  margin-top: 5px;
+}
+.symbol{
+    border: 1px solid black;
+    border-radius: 100%;
+    height: 24px; 
+    width: 24px; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    
+}
+
+.number-of-books{
+    border: 1px solid black;
+    display: flex;
+    justify-content: center;
+    height: 24px; 
+    width: 40px; 
+    padding-top: 3px;
+}
+
+.wishlist-button{
+    background-color: gray;
+    color: white;
+    width: 260%;
+    height: 30px;
+
+}
+
+.wishlist-button::before {
+    font-size: 24px; 
+    vertical-align: middle;
+    content: '\2665'; 
+    margin-right: 10px; 
+}
+.book-details{
+    display: flex;
+    flex-direction: column;
+    gap:2%;
+    padding-right: 20%;
+    padding-left: 3%;
+    width: 40%;
+    // border: 2px solid green;
+}
+
+.rating-quantity{
     display: flex;
     flex-direction: row;
-    gap: 1%; 
+    gap:10px;
 }
 
-/* For horizontal line */
+.rating{
+    border: 1px solid black;
+    background-color: green;
+    color: white;
+}
+
+.book-details h2,
+.book-details h3 {
+    margin: 0; 
+}
+
 .book-details hr {
     border-top: 1px solid black;
-    margin: 2% 0; 
-}
-
-/* For stars */
-.stars {
-    font-size: 2.4vw; 
-    outline-color: black;
-}
+    margin: 20px 0; 
+  }
+  
+  .stars {
+    font-size: 24px;
+    outline-color:black ;
+  }
