--- a/src/app/components/cart/cart/cart.component.scss
+++ b/src/app/components/cart/cart/cart.component.scss
@@ -105,6 +105,10 @@
     width: 65%;
     padding: 14px 0px 0px 0px;
 }
+.remove{
+    padding: 0% 0% 0% 190% ;
+    cursor: pointer;
+}
 .countvalue
 {
     border: 1px solid black;
