--- a/src/app/components/customerDetails/customer-details/customer-details.component.html
+++ b/src/app/components/customerDetails/customer-details/customer-details.component.html
@@ -23,7 +23,7 @@
                     </span>
                     <div class="count">
                         <span class="symbol" (click)="decreaseCount(cartList)">-</span> 
-                        <span class="countvalue">{{cartList.quantity}}</span> 
+                        <span class="countvalue">{{cartList.bookQuantity}}</span> 
                         <span class="symbol"  (click)="increaseCount(cartList)">+</span>
                     </div>
                 </div>
