--- a/src/app/components/orderList/orderlist/orderlist.component.html
+++ b/src/app/components/orderList/orderlist/orderlist.component.html
@@ -5,20 +5,20 @@
            <span class="items">My OrderList</span>
         </div>
     </div>
-    <div class="orderlist-cnt">
+    <div class="orderlist-cnt" *ngFor="let order of orderList" >
                 <div class="content" >
                     <div class="book-img">
-                       <img src="https://public-v2links.adobecc.com/d096df37-ca37-4026-553f-8cfa6bec09ec/component?params=component_id%3A37df9e8f-3de6-4a03-913f-715d82567412&params=version%3A0&token=1716027112_da39a3ee_e8ec441d4163f6e02e422af1273b2f3ff025109b&api_key=CometServer1" alt="">
+                       <img src="{{ order?.imagePath }}" alt="">
                     </div>
                     <div class="cart-detail">
-                        <span class="booktitle">title ddfgdg</span>
-                        <span style="color: #818181;">fjdsgndjgdikgj</span>
+                        <span class="booktitle">{{order?.title}}</span>
+                        <span style="color: #818181;">{{order?.author}}</span>
                         <div class="rating-cnt">
-                            <span class="sellingprice"><b>Rs.30000     </b><span class="offer">Rs.1999</span></span>
+                            <span class="sellingprice"><b>Rs.{{order?.price}}    </b><span class="offer">Rs.1999</span></span>
                         </div>
                     </div>  
                     <div class="ordered-date">
-                        <span><b>Order Placed on May 21</b></span>
+                        <span><b>Order Placed on {{order.orderDate}}</b></span>
                     </div>
                 </div>
             </div>
