--- a/src/app/components/cart/cart/cart.component.scss
+++ b/src/app/components/cart/cart/cart.component.scss
@@ -1,3 +1,12 @@
+.back-to-dashbaord a{
+    text-decoration: none;
+    padding:10%;
+    cursor: pointer;
+}
+.back-to-dashbaord {
+    padding: 2% 0% 1% 0%;
+}
+
 .cart-outer-cnt
 {
     // display: flex;
