--- a/src/app/components/wishList/wishlist/wishlist.component.html
+++ b/src/app/components/wishList/wishlist/wishlist.component.html
@@ -1,25 +1,25 @@
 <div class="wishlist-main-cnt">
     <div class="heading-content">
         <div class="wishlist-items">
-           <span class="home">Home / </span>
+           <span class="home" routerLink="/books">Home / </span>
            <span class="items">My WishList</span>
         </div>
     </div>
-    <div class="wishlist-cnt">
+    <div class="wishlist-cnt"  >
             <div class="address-header"><span>MyWishlist()</span></div>
-                <div class="content" >
+                <div class="content" *ngFor="let book of wishList">
                     <div class="book-img">
-                       <img src="https://public-v2links.adobecc.com/d096df37-ca37-4026-553f-8cfa6bec09ec/component?params=component_id%3A37df9e8f-3de6-4a03-913f-715d82567412&params=version%3A0&token=1716027112_da39a3ee_e8ec441d4163f6e02e422af1273b2f3ff025109b&api_key=CometServer1" alt="">
+                       <img src="{{ book?.imagePath }}" alt="">
                     </div>
                     <div class="cart-detail">
-                        <span class="booktitle">title ddfgdg</span>
-                        <span style="color: #818181;">fjdsgndjgdikgj</span>
+                        <span class="booktitle">{{book?.title}}</span>
+                        <span style="color: #818181;">{{book?.author}}</span>
                         <div class="rating-cnt">
-                            <span class="sellingprice"><b>Rs.30000     </b><span class="offer">Rs.1999</span></span>
+                            <span class="sellingprice"><b>Rs.{{book?.price}}    </b><span class="offer">Rs.1999</span></span>
                         </div>
                     </div>  
                     <div class="delete-icon">
-                        <mat-icon class="search-icon" svgIcon="delete-icon" aria-hidden="false" aria-label="Search SVG icon"></mat-icon>
+                        <mat-icon class="search-icon" svgIcon="delete-icon" aria-hidden="false" aria-label="Search SVG icon" (click)="removeWishList(book.wishListId,book.bookId)"></mat-icon>
                     </div>
                 </div>
             </div>
