--- a/src/app/components/booksContainer/books-container/books-container.component.scss
+++ b/src/app/components/booksContainer/books-container/books-container.component.scss
@@ -18,7 +18,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-
+padding-left: 10px;
 }
 .sort-item mat-icon{
     // padding-top: 5px;
