--- a/src/app/components/bookDetail/book-detail/book-detail.component.scss
+++ b/src/app/components/bookDetail/book-detail/book-detail.component.scss
@@ -196,3 +196,55 @@
     font-size: 24px;
     outline-color:black ;
   }
+  .feedback-cnt
+{
+    width: 100%;
+    background-color: #68676721;
+    border-radius: 4px;
+    padding: 10px;
+    // height: 100%;
+}
+.star_icon
+{
+    display: flex;
+    gap: 2.5%;
+}
+.input
+{
+    width: 100%;
+    height: 100%;
+}
+  .input input
+  {
+      height: 60px;
+      width: 100%;
+  }
+  .submit-btn
+  {
+      display: flex;
+      flex-direction: column;
+      align-items: end;
+      margin-right: -1%;
+  }
+  .name-cnt
+{
+    width: fit-content;
+    display: flex;
+    align-items: center;
+    // justify-content: center;
+    
+}
+.name
+{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+
+    background-color: rgba(55, 55, 55, 0.185);
+    height: 30px;
+    width: 30px;
+    border-radius: 100%;
+}
+
+//------------------------------------
