--- a/src/app/components/books/books/books.component.scss
+++ b/src/app/components/books/books/books.component.scss
@@ -1,10 +1,11 @@
 .book-outer-container {
     display: flex;
     flex-direction: row;
+    justify-content: center;
     gap: 2%;
     width: 100%;
     flex-wrap: wrap;
-    padding: 3% 8% 0% 14%;
+    // padding: 3% 8% 0% 14%;
     // border: 1px solid red;
 }
 
