--- a/src/app/components/cart/cart/cart.component.scss
+++ b/src/app/components/cart/cart/cart.component.scss
@@ -69,6 +69,8 @@
     flex-direction: row;
     align-items: center;
     flex-wrap: wrap;
+    // border: 1px solid green;
+    width: 40%;
 }
 
 .booktitle
@@ -82,6 +84,8 @@
 }
 .cart-detail{
     padding-left: 29px;
+    // border: 1px solid red;   
+    width: 70%;
 }
 .rating-cnt{
     padding-top: 7px;
@@ -104,14 +108,15 @@
 }
 .button
 {
-    height: fit-content;
+    // height: fit-content;
+    // border: 1px solid #df0a0a;   
 }
 .count
 {
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
-    width: 65%;
+    width: 45%;
     padding: 14px 0px 0px 0px;
 }
 .remove{
